# cvScore

./: .gitignore  README.md  pyproject.toml  requirements.txt
cvScore/: __main__.py  cli.py  commands.py
cvScore/classes/: ScoredDoc.py
data/: keywords.txt  testDoc1.docx  testDoc2.docx
tests/: testCli.py  testFileType.py  testFiles.py  testGroupOfFiles.py  testPDFDocument.py  testWordDocument.py
