# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvScore"
version = "0.1.0"
description = "A CLI application that scores CVs using keywords."
readme = "README.md"
authors = [{ name = "Philip Glebow", email = "11603439+pglebow@users.noreply.github.com" }]
dependencies = [
    "click >= 8.1.7",
    "docx >= 0.2.4",
    "filetype >= 1.2.0",
    "lxml>=5.2.1",
    "pillow>=10.3.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
]

[project.scripts]
calc = "cvScore.cli:cli"