# pyproject.toml
[tool.poetry]
name = "cvScore"
version = "0.1.3"
description = "A CLI application that scores CVs using keywords."
readme = "README.md"
authors = ["Philip Glebow <11603439+pglebow@users.noreply.github.com>"]
packages = [{include = "cvScore"}]

[tool.poetry.scripts]
cvScore = "cvScore.commands:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
docx="^0.2.4"
filetype="^1.2.0"
lxml="^5.2.1"
pypdf="^4.2.0"
python-docx="^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"